; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_cbq.c_cbq_dump_ovl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_cbq.c_cbq_dump_ovl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.cbq_class = type { i32, i64, i32 }
%struct.tc_cbq_ovl = type { i32, i64, i64, i32 }

@TCA_CBQ_OVL_STRATEGY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.cbq_class*)* @cbq_dump_ovl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cbq_dump_ovl(%struct.sk_buff* %0, %struct.cbq_class* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.cbq_class*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.tc_cbq_ovl, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.cbq_class* %1, %struct.cbq_class** %5, align 8
  %8 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %9 = call i8* @skb_tail_pointer(%struct.sk_buff* %8)
  store i8* %9, i8** %6, align 8
  %10 = load %struct.cbq_class*, %struct.cbq_class** %5, align 8
  %11 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 8
  %13 = getelementptr inbounds %struct.tc_cbq_ovl, %struct.tc_cbq_ovl* %7, i32 0, i32 3
  store i32 %12, i32* %13, align 8
  %14 = load %struct.cbq_class*, %struct.cbq_class** %5, align 8
  %15 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = add nsw i64 %16, 1
  %18 = getelementptr inbounds %struct.tc_cbq_ovl, %struct.tc_cbq_ovl* %7, i32 0, i32 2
  store i64 %17, i64* %18, align 8
  %19 = getelementptr inbounds %struct.tc_cbq_ovl, %struct.tc_cbq_ovl* %7, i32 0, i32 1
  store i64 0, i64* %19, align 8
  %20 = load %struct.cbq_class*, %struct.cbq_class** %5, align 8
  %21 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = getelementptr inbounds %struct.tc_cbq_ovl, %struct.tc_cbq_ovl* %7, i32 0, i32 0
  store i32 %22, i32* %23, align 8
  %24 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %25 = load i32, i32* @TCA_CBQ_OVL_STRATEGY, align 4
  %26 = call i32 @NLA_PUT(%struct.sk_buff* %24, i32 %25, i32 32, %struct.tc_cbq_ovl* %7)
  %27 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %28 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %3, align 4
  br label %34

30:                                               ; No predecessors!
  %31 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = call i32 @nlmsg_trim(%struct.sk_buff* %31, i8* %32)
  store i32 -1, i32* %3, align 4
  br label %34

34:                                               ; preds = %30, %2
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i8* @skb_tail_pointer(%struct.sk_buff*) #1

declare dso_local i32 @NLA_PUT(%struct.sk_buff*, i32, i32, %struct.tc_cbq_ovl*) #1

declare dso_local i32 @nlmsg_trim(%struct.sk_buff*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
